<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layouts.RelativeLayoutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/Red"
        android:text="@string/relative_layout_view1"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view2"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view3"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view4"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/relative_layout_center_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view5"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view6"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view7"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view8"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/Red"
        android:text="@string/relative_layout_view9"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/relative_layout_center_view"
        android:layout_toStartOf="@id/relative_layout_center_view"
        android:background="@color/Blue"
        android:text="@string/relative_layout_view10"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/relative_layout_center_view"
        android:layout_centerHorizontal="true"
        android:background="@color/Blue"
        android:text="@string/relative_layout_view11"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/relative_layout_center_view"
        android:layout_toRightOf="@id/relative_layout_center_view"
        android:background="@color/Blue"
        android:text="@string/relative_layout_view12"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_center_view"
        android:layout_centerHorizontal="true"
        android:background="@color/Blue"
        android:text="@string/relative_layout_view13"
        android:textColor="@color/White" />

</RelativeLayout>
