<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/main_layout_title" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toLinearLayouts"
        android:text="@string/main_layout_linear"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="toRelativeLayouts"
        android:text="@string/main_layout_relative"
        android:textAllCaps="false" />

</LinearLayout>
